--- a/TUTORIAL.mkd
+++ b/TUTORIAL.mkd
@@ -15,13 +15,13 @@ start off on a friendly note. And now, let's go!
 > You'll need beanstalkd listening at port 14711 to follow along. So simply start
 it using: `beanstalkd -l 127.0.0.1 -p 14711`
 
-beanstalkd监听14711端口，开启beanstalkd `beanstalkd -l 127.0.0.1 -p 14711`
+我们将使用beanstalkd监听14711端口，开启beanstalkd `beanstalkd -l 127.0.0.1 -p 14711`
 
 > Besides having beanstalkc installed, you'll typically also need PyYAML. If you
 insist, you can also use beanstalkc without PyYAML. For more details see
 Appendix A of this tutorial.
 
-安装beanstalkc，通常需要安装PyYAML。 如果你坚持不装，那就不装吧，你也可以使用beanstalkc即使不装PyYAML。更多详细请看教程最后的附录A。
+安装beanstalkc，通常需要安装PyYAML。 如果你坚持不装，当然也是可以的，即使不装PyYAML，你也可以使用beanstalkc。更多详细请看教程最后的附录A。
 
 > To use beanstalkc we have to import the library and set up a connection to an
 (already running) beanstalkd server:
@@ -38,7 +38,7 @@ server to respond to its initial connection attempt. If it is `None`, then
 there will be no timeout; it defaults to the result of your system's
 `socket.getdefaulttimeout()`.
 
-如果遗漏了`host` 和／或 `port`参数，分别默认使用`'localhost'`和 `11300`。参数`connect_timeout`是socket等待server返回初始化连接的秒数，
+如果遗漏了`host` 和／或 `port`参数，分别会默认使用`'localhost'`和 `11300`。参数`connect_timeout`是socket等待server返回［初始化连接］的秒数，
 如果是`None`, 将会没有时间限制；默认是你系统的`socket.getdefaulttimeout()`。
 
 
@@ -56,7 +56,7 @@ there will be no timeout; it defaults to the result of your system's
 
 > Or we can request jobs:
 
-或者，我们可以请求jobs:
+或者，我们可以申请jobs:
 
     >>> job = beanstalk.reserve()
     >>> job.body
@@ -74,7 +74,7 @@ default) is surpassed. A job is marked as done, by calling `delete`:
 we can invoke `reserve` with a timeout (in seconds) how long we want to wait to
 receive a job. If such a `reserve` times out, it will return `None`:
 
-`reserve`会阻塞直到一个job是ready状态, 也许会永远阻塞在那。如果这不是所期望的，我们可以调用在`reserve`时加上一个等待接收job的超时秒数。
+`reserve`会阻塞，直到一个job就绪了, 当然它也许会永远阻塞在那。如果这不是所期望的，我们可以调用在`reserve`时加上一个等待接收job的超时秒数。
 如果这样的`reserve`超时了，将返回`None`:
 
     >>> beanstalk.reserve(timeout=0) is None
@@ -88,7 +88,7 @@ receive a job. If such a `reserve` times out, it will return `None`:
 > Note that beanstalkc requires job bodies to be strings, conversion to/from
 strings is left up to you:
 
-注意, job的bodies是必须是字符串:
+注意, job的bodies必须是字符串:
 
     >>> beanstalk.put(42)
     Traceback (most recent call last):
@@ -118,7 +118,7 @@ Tube管理
 > A single beanstalkd server can provide many different queues, called "tubes" in
 beanstalkd. To see all available tubes:
 
-单个beanstalkd server可以提供很多不同的队列，在beanstalkd中调用"tubes", 可以看到所有可用的tubes:
+单个beanstalkd server可以提供很多不同的队列，这在beanstalkd中叫做"tubes", 来看看所有可用的tubes:
 
     >>> beanstalk.tubes()
     ['default']
@@ -134,7 +134,7 @@ tube "used" by the client. To see what tube you are currently using:
 > Unless told otherwise, a client uses the 'default' tube. If you want to use a
 different tube:
 
-除非明确告诉它，否则client使用`default`tube, 如果你想使用一个不同的tube:
+除非明确告诉它，否则client使用`default`tube, 如果你想使用其他的tube:
 
     >>> beanstalk.use('foo')
     'foo'
@@ -152,7 +152,7 @@ created by beanstalkd:
 > Of course, you can always switch back to the default tube. Tubes that don't have
 any client using or watching, vanish automatically:
 
-当然，你随时可以切换回到默认的tube。 没有任何client using或者watching的管道会自动消失：
+当然，你随时可以切换回到默认的tube。 没有任何client [using] 或者 [watching] 的管道会自动消失：
 
     >>> beanstalk.use('default')
     'default'
@@ -198,7 +198,7 @@ watching them:
 > You can't watch zero tubes. So if you try to ignore the last tube you are
 watching, this is silently ignored:
 
-你不能watch 0个tube, 因此，如果你尝试ignore最后一个你在watching的tube, 这将会默默的被忽略掉:
+你不能watch 0个tube, 因此，如果你尝试ignore最后一个正在watch的tube, 这个操作将会被隐式的忽略掉:
 
     >>> beanstalk.ignore('default')
     0
@@ -234,7 +234,7 @@ the tube you are `using`.
 Statistical details for a job can only be retrieved during the job's lifecycle.
 So let's create another job:
 
-Beanstalkd在server中积聚着各种tube和job级别的统计数据。job的统计细节只能在job的生命周期中取到。所以，来创建另一个job：
+Beanstalkd在server中积聚着各种tube和job级别的统计数据。job的统计细节只能在job的生命周期中取到。让我们来创建另一个job：
 
     >>> beanstalk.put('ho?')
     3
@@ -243,7 +243,7 @@ Beanstalkd在server中积聚着各种tube和job级别的统计数据。job的统
 
 > Now we retrieve job-level statistics:
 
-现在，我们取到了job-level的统计数据：
+现在，我们取回job-level的统计数据：
 
     >>> from pprint import pprint
     >>> pprint(job.stats())                         # doctest: +ELLIPSIS
@@ -258,7 +258,7 @@ Beanstalkd在server中积聚着各种tube和job级别的统计数据。job的统
 > If you try to access job stats after the job was deleted, you'll get a
 `CommandFailed` exception:
 
-如果你在job被deleted之后，尝试获取job stats，你将会得到一个`CommandFailed`异常：
+如果你在job被deleted之后，尝试获取job stats，将会得到一个`CommandFailed`异常：
 
     >>> job.delete()
     >>> job.stats()                         # doctest: +IGNORE_EXCEPTION_DETAIL
@@ -267,7 +267,7 @@ Beanstalkd在server中积聚着各种tube和job级别的统计数据。job的统
 
 > Let's have a look at some numbers for the `'default'` tube:
 
-让我们来看看一些`default`tube的数据：
+让我们来看看`default`tube的数据：
 
     >>> pprint(beanstalk.stats_tube('default'))     # doctest: +ELLIPSIS
     {...
@@ -281,7 +281,7 @@ Beanstalkd在server中积聚着各种tube和job级别的统计数据。job的统
 > Finally, there's an abundant amount of server-level statistics accessible via
 the `Connection`'s `stats` method. We won't go into details here, but:
 
-最后，通过调用`Connection`的`stats`方法，可以获取大量的server-level的统计数据。我们在这里就不细说了，但是：
+最后，通过调用`Connection`的`stats`方法，可以拿到大量server-level的统计数据。我们在这里就不细说了，但是：
 
     >>> pprint(beanstalk.stats())                   # doctest: +ELLIPSIS
     {...
@@ -301,7 +301,7 @@ the `Connection`'s `stats` method. We won't go into details here, but:
 
 > In "Basic Operation" above, we discussed the typical lifecycle of a job:
 
-在上文的"基础操作"中，我们讨论了job的典型的生命周期：
+在上文的"基础操作"中，我们讨论了job典型的生命周期：
 
      put            reserve               delete
     -----> [READY] ---------> [RESERVED] --------> *poof*
@@ -316,7 +316,7 @@ the `Connection`'s `stats` method. We won't go into details here, but:
 Along with those states come a few transitions, so the full picture looks like
 the following:
 
-除了`ready`和`reserved`之外，一个job也可以会是`delayed`或者`buried`状态。有一些过度伴随着这些状态，下面的是完整的图片：
+除了`ready`和`reserved`之外，一个job也可以是`delayed`或者`buried`状态。有一些过度伴随着这些状态，下面的是完整的图片：
 
        put with delay               release with delay
       ----------------> [DELAYED] <------------.
@@ -346,7 +346,7 @@ the following:
 create a job with a delay. Such a job will only be available for reservation
 once this delay passes:
 
-现在，来看看这些新的可能性。首先，我们创建一个带有dalay的job, 这样的job只有在通过延迟的时候才可获得：
+现在，来看看这些新的可能性。首先，我们创建一个带有dalay的job, 这样的job只有在通过延迟时间才可获得：
 
     >>> beanstalk.put('yes!', delay=1)
     4
@@ -361,7 +361,7 @@ once this delay passes:
 > If we are not interested in a job anymore (e.g. after we failed to
 process it), we can simply release the job back to the tube it came from:
 
-如果我们对job不感兴趣（比如，处理失败），我们可以简单的释放这个job回 它来的那个tube:
+如果我们对job不感兴趣（比如，在处理失败之后），我们可以简单的释放这个job回 它来的那个tube:
 
     >>> job.release()
     >>> job.stats()['state']
@@ -370,7 +370,7 @@ process it), we can simply release the job back to the tube it came from:
 > Want to get rid of a job? Well, just "bury" it! A buried job is put aside and is
 therefore not available for reservation anymore:
 
-想要除去一个job? 只需"bury"它！一个buried job被放在旁边，并且因此不会为了预留而获得：
+想要把一个job去掉? 只需"bury"它！一个buried job被放在一旁，并且是不可用的：
 
     >>> job = beanstalk.reserve()
     >>> job.bury()
@@ -391,7 +391,7 @@ Buried jobs被维护在 正常job处理生命周期的外部 一个特别的 FIF
 > You can request many jobs to be kicked alive at once, `kick`'s return value will
 tell you how many jobs were actually kicked alive again:
 
-你可以同时请求很多jobs来kicked alive，`kick`返回的值将告诉你有多少jobs被实际kicked alive：
+你可以同时对多个jobs来kicked alive，`kick`返回的值将告诉你有多少jobs被实际kicked alive：
 
     >>> beanstalk.kick(42)
     0
@@ -410,7 +410,7 @@ alive this particular job, overriding the FIFO operation of the burial queue:
     'ready'
 
 (NOTE: The `kick-job` command was introduced in beanstalkd v1.8.)
-(NOTE: `kick-job`命令在beanstalkd v1.8中被介绍)
+(NOTE: `kick-job`命令在beanstalkd v1.8中有介绍)
 
 Inspecting Jobs
 
@@ -446,7 +446,7 @@ around from our previous examples, so:
 their state, beanstalkd also provides a few commands. To peek at the same job
 that would be returned by `reserve` -- the next ready job -- use `peek-ready`:
 
-如果你一个特别的job不感兴趣，但是想根据他们的状态看看jobs, beanstalkd也提供了一些命令。来peek at相同的job, 将会通过reserve返回，-- 下一个ready job -- 使用peek-ready:
+如果你对一个job不感兴趣，但是想根据状态看到jobs, beanstalkd也提供了一些命令。来peek at相同的job, 将会通过reserve返回，-- 下一个ready job -- 使用peek-ready:
 
     >>> job = beanstalk.peek_ready()
     >>> job.body
@@ -465,7 +465,7 @@ requests on unreserved jobs are silently ignored:
 
 > You can, though, delete a job that was not reserved by you:
 
-但是，你可以删除一个 不是通过你 reserved的job：
+但是，你可以删除一个 不是你 reserved的job：
 
     >>> job.delete()
     >>> job.stats()                         # doctest: +IGNORE_EXCEPTION_DETAIL
@@ -474,7 +474,7 @@ requests on unreserved jobs are silently ignored:
 
 > Finally, you can also peek into the special queues for jobs that are delayed:
 
-最后，你也可以peek into 特殊的delayed队列:
+最后，你也可以在特殊的队列中peek delayed的jobs:
 
     >>> _ = beanstalk.put('o tempores', delay=120)
     >>> job = beanstalk.peek_delayed()
@@ -513,7 +513,7 @@ job优先级
 > If need arises, you can override this behaviour by giving different jobs
 different priorities. There are three hard facts to know about job priorities:
 
-如果需要，你可以覆盖这种行为通过给不同的job不同的优先级。有三个关于job优先级的事实需要知道：
+如果有需要，你可以覆盖这种行为，通过给不同的job不同的优先级。有三个关于job优先级的事实需要知道：
 
   1. Jobs with lower priority numbers are reserved before jobs with higher
   priority numbers.
@@ -525,12 +525,12 @@ different priorities. There are three hard facts to know about job priorities:
   (`beanstalkc.DEFAULT_PRIORITY`).
   
   1. 低优先数字的job 被reserved在 高优先数字的job 之前。
-  2. beanstalkd优先急是 32位 无符号整形（0-2*＊32－1）。
-  3. beanstalkc 使用 2*＊31作为默认的job优先级 (`beanstalkc.DEFAULT_PRIORITY`)。
+  2. beanstalkd优先级是 32位 无符号整形（0-2**32－1）。
+  3. beanstalkc 使用 2**31 作为默认的job优先级 (`beanstalkc.DEFAULT_PRIORITY`)。
 
 > To create a job with a custom priority, use the keyword-argument `priority`:
 
-使用定制的优先级来创建一个job，使用keyword-argument `priority`:
+使用定制的优先级来创建一个job，使用关键字参数 `priority`:
 
     >>> _ = beanstalk.put('foo', priority=42)
     >>> _ = beanstalk.put('bar', priority=21)
@@ -552,7 +552,7 @@ are still handled in a FIFO manner.
 
 > Fin!
 
-结！
+终章！
 ----
 
     >>> beanstalk.close()
